@@ -2,6 +2,8 @@ package flowershop.finances;
 
 import flowershop.clock.ClockService;
 import flowershop.clock.PendingOrder;
+import flowershop.inventory.DeletedProduct;
+import flowershop.product.ProductService;
 import flowershop.services.AbstractOrder;
 import org.javamoney.moneta.Money;
 import org.salespointframework.accountancy.Accountancy;
@@ -20,9 +22,11 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import javax.money.MonetaryAmount;
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.time.temporal.TemporalAmount;
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static flowershop.finances.Category.Einkauf;
 
@@ -34,17 +38,19 @@ public class CashRegisterService implements Accountancy {
 
 	private final CashRegisterRepository cashRegisterRepository;
 	private final ClockService clockService;
+	private final ProductService productService;
 
 
 	@Autowired
 	public CashRegisterService(OrderManagement<AbstractOrder> orderManagement,
-							   CashRegisterRepository cashRegisterRepository, ClockService clockService) {
+							   CashRegisterRepository cashRegisterRepository, ClockService clockService, ProductService productService) {
 		this.orderManagement = orderManagement;
 		this.cashRegisterRepository = cashRegisterRepository;
+		this.productService = productService;
 		Streamable<AbstractOrder> previousOrders = Optional.ofNullable(orderManagement.findBy(OrderStatus.PAID))
 			.orElse(Streamable.empty());
 		for (Order order : previousOrders) {
-			AccountancyEntry convertedOrder = new AccountancyEntryWrapper((AbstractOrder) order, clockService.now());
+			AccountancyEntry convertedOrder = new AccountancyEntryWrapper((AbstractOrder) order, clockService.now(), productService);
 			this.add(convertedOrder);
 		}
 		this.clockService = clockService;
@@ -80,7 +86,7 @@ public class CashRegisterService implements Accountancy {
 		if(((AccountancyEntryWrapper)entry).getCategory().equals("Einkauf"))
 		{
 			Set<PendingOrder> pendingOrders = cashRegister.getPendingOrders();
-			PendingOrder newOrder = new PendingOrder(((AccountancyEntryWrapper) entry).getItems(), clockService.nextWorkingDay());
+			PendingOrder newOrder = new PendingOrder(((AccountancyEntryWrapper) entry).getFlowers(), clockService.nextWorkingDay());
 			pendingOrders.add(newOrder);
 			cashRegister.setPendingOrders(pendingOrders);
 		}
@@ -96,8 +102,59 @@ public class CashRegisterService implements Accountancy {
 	public void onOrderPaid(OrderEvents.OrderPaid event) {
 		AbstractOrder order = (AbstractOrder) event.getOrder();
 		//convert order to AccountancyEntry
-		AccountancyEntryWrapper convertedOrder = new AccountancyEntryWrapper(order,clockService.now());
+		AccountancyEntryWrapper convertedOrder = new AccountancyEntryWrapper(order,clockService.now(), productService);
 		this.add(convertedOrder);
+	}
+
+	/**
+	 *
+	 * @return list of all deleted products ever
+	 */
+	public List<DeletedProduct> getAllDeletedProducts(){
+		return productService.getDeletedProducts();
+	}
+
+	public List<DeletedProduct> getAllDeletedProducts(LocalDate date1, LocalDate date2){
+		return productService.getDeletedProducts().stream()
+			.filter(product -> (!date1.isAfter(product.getDateWhenDeleted()) && !date2.isBefore(product.getDateWhenDeleted())))
+			.toList();
+	}
+
+	/**
+	 *
+	 * @param date
+	 * @return list of all deleted products on a certain date
+	 */
+	public List<DeletedProduct> findDeletedProductsByDate(LocalDate date){
+		return normalizeDeletedProducts(productService.getDeletedProducts().stream()
+			.filter(product -> date.equals(product.getDateWhenDeleted()))
+			.toList());
+	}
+
+	/**
+	 *
+	 * @param month any day in a desired month
+	 * @return list of all deleted products during a certain month
+	 */
+	public List<DeletedProduct> findDeletedProductsByMonth(LocalDate month){
+		return normalizeDeletedProducts(productService.getDeletedProducts().stream()
+			.filter(product -> month.getMonth().equals(product.getDateWhenDeleted().getMonth())
+				&& month.getYear() == product.getDateWhenDeleted().getYear())
+			.toList());
+	}
+
+	private List<DeletedProduct> normalizeDeletedProducts(List<DeletedProduct> deletedProducts) {
+		Map<String, List<DeletedProduct>> grouped = deletedProducts.stream().collect(Collectors.groupingBy((DeletedProduct::getName)));
+		List<DeletedProduct> output = new ArrayList<>();
+		for (Map.Entry<String, List<DeletedProduct>> entry : grouped.entrySet()) {
+			String name = entry.getKey();
+			MonetaryAmount pricePerUnit = entry.getValue().getFirst().getPricePerUnit();
+			int quantityDeleted = entry.getValue().stream().mapToInt(DeletedProduct::getQuantityDeleted).sum();
+			MonetaryAmount totalLoss = pricePerUnit.multiply(quantityDeleted);
+			LocalDate dateWhenDeleted = entry.getValue().getFirst().getDateWhenDeleted();
+			output.add(new DeletedProduct(name, pricePerUnit, quantityDeleted, totalLoss, dateWhenDeleted));
+		}
+		return output;
 	}
 
 	/**
@@ -234,7 +291,12 @@ public class CashRegisterService implements Accountancy {
 		MonetaryAmount moneyDifference = salesVolume(endToNow, endToNowDuration).get(endToNow);
 		CashRegister cashRegister = getCashRegister();
 		MonetaryAmount moneyThen = cashRegister.getBalance().subtract(moneyDifference);
-		List<AccountancyEntry> allEntries = getCashRegister().getAccountancyEntries().stream().toList();
+		//List<AccountancyEntry> allEntries = getCashRegister().getAccountancyEntries().stream().toList();
+		List<AccountancyEntryWrapper> allEntries = getCashRegister().getAccountancyEntries().stream()
+			.map(entry -> (AccountancyEntryWrapper) entry)
+			.sorted(Comparator.comparing(AccountancyEntryWrapper::getTimestamp))
+			.toList();
+
 		if (allEntries.isEmpty()) {
 			return null;
 		}
@@ -242,7 +304,7 @@ public class CashRegisterService implements Accountancy {
 			interval,
 			moneyThen,
 			this,
-			((AccountancyEntryWrapper) allEntries.get(0)).getTimestamp(),
+			allEntries.getFirst().getTimestamp(),
 			clockService);
 	}
 
@@ -264,7 +326,10 @@ public class CashRegisterService implements Accountancy {
 		MonetaryAmount moneyDifference = salesVolume(endToNow, endToNowDuration).get(endToNow);
 		CashRegister cashRegister = getCashRegister();
 		MonetaryAmount moneyThen = cashRegister.getBalance().subtract(moneyDifference);
-		List<AccountancyEntry> allEntries = getCashRegister().getAccountancyEntries().stream().toList();
+		List<AccountancyEntryWrapper> allEntries = getCashRegister().getAccountancyEntries().stream()
+			.map(entry -> (AccountancyEntryWrapper) entry)
+			.sorted(Comparator.comparing(AccountancyEntryWrapper::getTimestamp))
+			.toList();
 		if (allEntries.isEmpty()) {
 			return null;
 		}
@@ -272,7 +337,7 @@ public class CashRegisterService implements Accountancy {
 			interval,
 			moneyThen,
 			this,
-			((AccountancyEntryWrapper) allEntries.get(0)).getTimestamp(),
+			allEntries.getFirst().getTimestamp(),
 			clockService);
 	}
 
